1、重新编译 2.4.8 版本